--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ pgvector = "^0.1.7"
 psycopg2cffi = {version = "^2.9.0", optional = true}
 loguru = "^0.7.0"
 elasticsearch = "8.8.2"
+pyodbc = {version = "^5.0.1", optional = true}
+sentence-transformers = "^2.2.2"
+
 
 [tool.poetry.scripts]
 start = "server.main:start"
@@ -43,6 +46,7 @@ dev = "local_server.main:start"
 
 [tool.poetry.extras]
 postgresql = ["psycopg2cffi"]
+sqlserver = ["pyodbc"]
 
 [tool.poetry.group.dev.dependencies]
 httpx = "^0.23.3"
